Move between computers

--- a/Laboration03/Views/_ViewImports.cshtml
+++ b/Laboration03/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Laboration03
 @using Laboration03.Models
+@using Laboration03.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
